test/sh/error/misc/invalid_block_in_return.sk
return 1 {
	# invalid
}
